fix drawer lead height on small screens

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -173,6 +173,9 @@ table {
         max-width: calc(100% - 56px);
         width: 280px;
     }
+    .drawer .drawerLead {
+        height: 56px;
+    }
     .viewMain {
         margin-top: 56px;
         overflow: hidden;
